Adding Junits to all needed XML definition classes. Including the rest of the definitions that were left